# vsgm

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  clang-format.sh  prepare_data.sh  run_query.sh
lib/bliss-0.73/bliss/: kstack.hh
src/app/: Makefile  pattern_matching_pipeline.cu
src/common/: command_line.h  meta.h  time_measurer.h
src/device/: cuda_context.h  device_array.h  device_memory_info.h  mgpu_context.h
src/executor/: batch_data.h  batch_manager.h  batch_spec.h  im_data.h  pipeline_executor.h  processor.h  split_batch.h  work_context.h
src/executor/ops/: compute.h  compute_count.h  compute_path_count.h  count.h  filter_compute.h  materialize.h  organize_batch.h
src/gpu/: gpu_check_constraints_common.h  gpu_utils_bin_search.h  gpu_utils_compact.h  gpu_utils_copy.h  gpu_utils_filter.h  gpu_utils_gpsm_bin_search.h  gpu_utils_gpsm_bin_search_count.h  gpu_utils_intersect.h  gpu_utils_iterator.h  gpu_utils_load_balance.h  gpu_utils_reduce.h  gpu_utils_scan.h  gpu_utils_segment_reduce.h  gpu_utils_transform.h
src/graph/: abstract_graph.h  cpu_graph.h  graph_io.h  small_graph.h
src/nova/: CMakeLists.txt  recursive_kmeans.cpp  task_manager.hpp  usage.md
src/nova/cmake/: FindNOVA.cmake
src/preprocess/: Makefile  preprocess_graph.cc  preprocess_graph.h
src/query/: clique.h  dev_plan.h  graphlet.h  partial_order.h  pattern.h  plan.h  query.h
src/tools/: Makefile  features.cc  fennel.cc  kmeans.cc  kmeans_utils.h  query_test.cc  view_bin.h  view_packing.cc
src/view/: view_bin.h  view_bin_buffer.h  view_bin_holder.h  view_bin_manager.h
